deployments/epp-node-prototype/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: epp-node-http
  namespace: epp
spec:
  selector:
    app: epp-node
  ports:
  - port: 3000
